--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,5 @@
 # Sample workflow for building and deploying a Next.js site to GitHub Pages
+# Triggers on push to main branch and manual dispatch
 #
 # To get started with Next.js see: https://nextjs.org/docs/getting-started
 #
