--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "3.1.14",
-    "canvas": "^3.0.1",
     "critters": "^0.0.20",
     "hls.js": "^1.5.18",
     "next": "14.0.4",
@@ -38,6 +37,6 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.17.0"
   }
 }
