--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "deploy": "gh-pages -d out",
-    "clean": "rimraf .next out"
+    "clean": "rimraf .next out",
+    "prebuild": "npm run clean"
   },
   "dependencies": {
     "@react-pdf/renderer": "3.1.14",
