--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.1",
     "react-pdf": "7.3.3",
+    "sharp": "^0.33.2",
     "video.js": "^8.21.0"
   },
   "devDependencies": {
