--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          fetch-depth: 0
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -43,13 +44,28 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+          npm install -g pnpm
           npm install sharp
+      - name: Debug environment
+        run: |
+          node --version
+          npm --version
+          ls -la
+          cat package.json
+      - name: Clean previous builds
+        run: |
+          rm -rf .next
+          rm -rf out
       - name: Build with Next.js
         run: |
-          npm run clean || true
           npm run build
         env:
           NEXT_TELEMETRY_DISABLED: 1
+          NODE_ENV: production
+          CI: true
+      - name: Verify build output
+        run: |
+          ls -la out/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
