--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://jaywakeford.github.io/ai-research-sc-analytics-v2",
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "next build && touch out/.nojekyll",
     "start": "next start",
     "clean": "rimraf .next out",
     "prebuild": "npm run clean"
