--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -6,11 +6,8 @@
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -25,7 +22,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -33,45 +29,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          fetch-depth: 0
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "18"
           cache: npm
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+          
       - name: Install dependencies
         run: |
-          npm ci
-          npm install -g pnpm
-          npm install sharp
-      - name: Debug environment
-        run: |
-          node --version
-          npm --version
-          ls -la
-          cat package.json
-      - name: Clean previous builds
-        run: |
-          rm -rf .next
-          rm -rf out
-      - name: Build with Next.js
+          npm install
+          npm install sharp --force
+          
+      - name: Build
         run: |
           npm run build
         env:
-          NEXT_TELEMETRY_DISABLED: 1
           NODE_ENV: production
-          CI: true
-      - name: Verify build output
-        run: |
-          ls -la out/
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
