--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "homepage": "https://jaywakeford.github.io/ai-research-sc-analytics-v2",
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build && touch out/.nojekyll",
+    "build": "next build",
     "start": "next start",
-    "clean": "rimraf .next out",
-    "prebuild": "npm run clean"
+    "clean": "rimraf .next out"
   },
   "dependencies": {
     "@react-pdf/renderer": "3.1.14",
