--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,9 +27,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          lfs: true
-          fetch-depth: 0
       
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -45,17 +42,13 @@ jobs:
           npm ci
           npm install sharp --force
           
-      - name: Build
+      - name: Build with Next.js
         run: |
           npm run clean || true
           npm run build
         env:
           NODE_ENV: production
           NEXT_TELEMETRY_DISABLED: 1
-          
-      - name: Fix permissions
-        run: |
-          chmod -R a+r out
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
