--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -12,17 +12,17 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
 # Allow only one concurrent deployment
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,15 +34,12 @@ jobs:
           node-version: "18"
           cache: npm
           
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-        
       - name: Install dependencies
         run: |
           npm ci
           npm install sharp --force
           
-      - name: Build with Next.js
+      - name: Build
         run: |
           npm run clean || true
           npm run build
@@ -50,18 +47,9 @@ jobs:
           NODE_ENV: production
           NEXT_TELEMETRY_DISABLED: 1
           
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: out
+          branch: gh-pages
+          clean: true
