--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "homepage": "https://jaywakeford.github.io/ai-research-sc-analytics-v2",
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "clean": "rimraf .next out"
+    "clean": "rimraf .next out",
+    "deploy": "gh-pages -d out -b gh-pages"
   },
   "dependencies": {
     "@react-pdf/renderer": "3.1.14",
