--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -16,11 +16,6 @@ permissions:
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -32,24 +27,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-          cache: npm
           
       - name: Install dependencies
-        run: |
-          npm ci
-          npm install sharp --force
+        run: npm install
           
       - name: Build
-        run: |
-          npm run clean || true
-          npm run build
+        run: npm run build
         env:
           NODE_ENV: production
-          NEXT_TELEMETRY_DISABLED: 1
           
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          folder: out
-          branch: gh-pages
-          clean: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
+          publish_branch: gh-pages
+          force_orphan: true
