--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,14 +27,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
+          cache: npm
           
-      - name: Install dependencies
-        run: npm install
+      - name: Clean install dependencies
+        run: |
+          npm ci
+          npm install sharp --force
           
-      - name: Build
-        run: npm run build
+      - name: Clean and Build
+        run: |
+          npm run clean
+          npm run build
         env:
           NODE_ENV: production
+          NEXT_TELEMETRY_DISABLED: 1
           
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -43,3 +49,8 @@ jobs:
           publish_dir: ./out
           publish_branch: gh-pages
           force_orphan: true
+          cname: # optional
+          enable_jekyll: false
+          allow_empty_commit: false
+          keep_files: false
+          commit_message: "Deploy Next.js site to Pages"
