--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "20.4.5",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.2.7",
     "@types/video.js": "^7.3.58",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
