--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rimraf .next out",
-    "deploy": "gh-pages -d out -b gh-pages"
+    "export": "next export",
+    "deploy": "npm run build && npm run export && gh-pages -d out -b gh-pages"
   },
   "dependencies": {
     "@react-pdf/renderer": "3.1.14",
